# web_starter_01

./: .env  Cargo.toml  application.yaml
src/: App.rs  common.rs  error.rs  logger.rs  main.rs  response.rs  server.rs
src/api/: mod.rs  user.rs
src/config/: database.rs  mod.rs  server.rs
src/database/: database.rs  mod.rs
src/entity/: gen_table.rs  gen_table_column.rs  meet.rs  meetroom.rs  mod.rs  prelude.rs  qrtz_blob_triggers.rs  qrtz_calendars.rs  qrtz_cron_triggers.rs  qrtz_fired_triggers.rs  qrtz_job_details.rs  qrtz_locks.rs  qrtz_paused_trigger_grps.rs  qrtz_scheduler_state.rs  qrtz_simple_triggers.rs  qrtz_simprop_triggers.rs  qrtz_triggers.rs  sys_config.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_logininfor.rs  sys_menu.rs  sys_notice.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_dept.rs  sys_role_menu.rs  sys_user.rs  sys_user_post.rs  sys_user_role.rs
