[package]
name = "web_starter_01"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version= "0.8.8",features=["macros"]}
tokio = { version = "1.49.0", features = ["full"] }
tracing ={ version = "0.1.41", features = ["async-await"] }
tracing-subscriber ={ version="0.3.19", features = ["chrono", "env-filter"] }
config = { version = "0.15.11" ,features = ["yaml"]}
serde = { version = "1.0.219" ,features = ["derive"]}
anyhow = "1.0.98"
sea-orm = { version = "1.1.19" ,features = ["runtime-tokio","with-chrono","sqlx-mysql","debug-print"]}
num_cpus = "1.17.0"
